# aithena

./: .gitignore  CMakeLists.txt  README.md  npc_wasm.wasm
.github/workflows/: ci.yml
examples/: village_sim.cpp
include/npc/: npc.hpp  npc_capi.h
include/npc/ai/: behavior_tree.hpp  blackboard.hpp  fsm.hpp  utility_ai.hpp
include/npc/combat/: combat_system.hpp
include/npc/core/: random.hpp  types.hpp  vec2.hpp
include/npc/dialog/: dialog_system.hpp
include/npc/emotion/: emotion_system.hpp
include/npc/event/: event_system.hpp
include/npc/memory/: memory_system.hpp
include/npc/navigation/: pathfinding.hpp
include/npc/perception/: perception_system.hpp
include/npc/personality/: personality_traits.hpp
include/npc/schedule/: schedule_system.hpp
include/npc/skill/: skill_system.hpp
include/npc/social/: faction_system.hpp  group_behavior.hpp  relationship_system.hpp
include/npc/trade/: trade_system.hpp
include/npc/world/: lod_system.hpp  simulation_manager.hpp  spatial_index.hpp  time_system.hpp  world.hpp  world_event_manager.hpp
src/: npc.cpp  npc_capi.cpp
src/world/: world.cpp
tests/: run_tests.cpp  test_runner.hpp
